<resources>
    <string name="app_name">EthaPlanner</string>
    <string name="action_settings">About</string>

   <!--Strings for Search-->
    <string name="Search">Search</string>
    <string name="Please_set_a_date">Please set a date</string>
    <string name="Please_set_target_APK">Sort by</string>

    <!--Weather Strings-->
    <string name="weather_type">Weather: %s!</string>
    <string name="weather_high">max</string>
    <string name="weather_low">min</string>
    <string name="weather_celsius">°C</string>
    <string name="weather_temperature">Temperature</string>
    <string name="weather_recommend">We recommend:</string>

    <!--Systembolaget strings-->
    <string name="under_20">I\'m under 20</string>
    <string name="over_20">I\'m over 20</string>
    <string name="disclaimer_text">This application contains information about alcoholic beverages. To use this application or buy alcoholic beverages, you have to be 20 years old or older.</string>
    <string name="bolaget_license">(All images and products are owned by Systembolaget AB)</string>
    <string name="disclaimer_header">Disclaimer!</string>
    <string name="search">Search</string>

    <!--Categories in Spinner-->
    <string name="high_alc_per_crown">High amount of alcohol per SEK</string>
    <string name="low_alc_per_crown">Low amount of alcohol per SEK</string>
    <string name="alcohol_free">Non-alcoholic</string>
    <string name="no_sort_by_apk">Surprise me</string>

    <!--Location strings-->
    <string name="location_error">Location-services is not activated!</string>

    <!--Misc strings-->
    <string name="Calender">Calendar</string>
    <string name="select_date">Select date</string>

</resources>
