<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_disclaimer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.mah.homebois.ethaplanner.views.DisclaimerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            android:src="@drawable/logga"
            android:layout_weight="1" />

        <TextView
            android:text="@string/disclaimer_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:textSize="40dp" />

        <TextView
            android:text="@string/disclaimer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="6dp"/>

        <TextView
            android:text="@string/bolaget_license"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_marginBottom="20dp">

            <Button
                android:text="@string/under_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDecline"
                android:background="@drawable/roundcorner"
                android:layout_weight="1"
                android:textColor="#ffffff" />



            <Button
                android:text="@string/over_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAccept"
                android:background="@drawable/roundcorner"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
